...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="Amount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ingredient_specific_list_name_field" />

    <TextView
        android:id="@+id/ingredient_specific_amount_unit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="XX"
        app:layout_constraintStart_toEndOf="@+id/ingredient_specific_amount_text"
        app:layout_constraintTop_toBottomOf="@+id/ingredient_specific_list_name_field" />

    <TextView
        android:id="@+id/ingredient_specific_amount_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
